refactor: downgrade from Java 17 to Java 11
- Convert all sealed interfaces to regular interfaces
- Convert all records to final classes with record-style accessors
- Replace pattern matching instanceof with traditional instanceof + cast
- Replace Stream.toList() with Collectors.toList()
- Update pom.xml compiler source/target to 11

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>